--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.7.2
-Django==5.0
-mysqlclient==2.1.1
+Django==4.2.7
 sqlparse==0.4.4
+mysqlclient
+python-telegram-bot==13.12
 redis
+psutil
+python-dateutil
